# SPDX-License-Identifier: MIT
[package]
name = "rupdate_core"
version = "0.1.2"
rust-version = "1.61.0"
edition = "2021"
description = "Core libraries of the update concept"
repository = "gitlabintern.emlix.com:elektrobit/base-os/rupdate.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "~1.0", default-features = false }
bincode = { version = "~1.3.3", default-features = false }
log = { version = "~0.4" }
flate2 = { version = "~1.0", features = ["zlib"], default-features = false }
ring = { version = "~0.17", features = ["alloc"], default-features = false }
serde = { version = "~1.0", default-features = false }
serde_json = { version = "~1.0", features = [
    "alloc",
], default-features = false }
serde_with = { version = "~3.1", features = [
    "macros",
], default-features = false }
tar = { version = "~0.4", default-features = false }

[dev-dependencies]
mockall = "~0.11"
