# SPDX-License-Identifier: MIT
[package]
name = "update-tool-create-partenv"
version = "0.1.0"
edition = "2021"
description = "Tool for creating partition config images for the bootloader"
repository = "gitlabintern.emlix.com:elektrobit/base-os/rupdate.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "~1.0", default-features = false }
log = { version = "~0.4" }
log4rs = { version = "~1.2", features = [
    "all_components",
    "gzip",
], default-features = false }
# NOTE: Clap pulls a lot additional dependencies for the derive feature
clap = { version = "~4.0", features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
], default-features = false }
rupdate_core = { version = "~0.1", path = "../core", default-features = false }

[dev-dependencies]
bincode = { version = "~1.3.3", default-features = false }
rupdate_testing = { version = "~0.1", path = "../testing", default-features = false }
