# SPDX-License-Identifier: MIT
[package]
name = "rupdate"
version = "0.1.2"
edition = "2021"
description = "Update tool written in Rust"
repository = "gitlabintern.emlix.com:elektrobit/base-os/rupdate.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "~1.0", default-features = false }
log = { version = "~0.4" }
log4rs = { version = "~1.2", features = [
    "all_components",
    "gzip",
], default-features = false }
libc = { version = "~0.2", default-features = false }
rupdate_core = { version = "~0.1", path = "../core", default-features = false }
# NOTE: Clap pulls a lot additional dependencies for the derive feature
clap = { version = "~4.0", features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
], default-features = false }

[dev-dependencies]
rupdate_testing = { version = "~0.1", path = "../testing", default-features = false }
serde_json = { version = "~1.0", features = [
    "alloc",
], default-features = false }
